tests/mm0_mmu/fail/bad-sort1243.mm0
-- bad modifier order
pure strict free provable sort s1243;